--- a/mavenproject/test-output/old/Default suite/classes.html
+++ b/mavenproject/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>mavenproject.Sample_Test</td>
+<td>mavenproject.Dataexisting</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,10 +12,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>f</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>online</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
