--- a/mavenproject/test-output/old/Default suite/methods.html
+++ b/mavenproject/test-output/old/Default suite/methods.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e1e369">  <td>19/10/22 14:16:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample_Test.f()[pri:0, instance:mavenproject.Sample_Test@11fc564b]">f</td> 
-  <td>main@1316557528</td>   <td></td> </tr>
-<tr bgcolor="e1e369">  <td>19/10/22 14:16:51</td>   <td>25165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample_Test.online()[pri:0, instance:mavenproject.Sample_Test@11fc564b]">online</td> 
-  <td>main@1316557528</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>19/10/29 21:46:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dataexisting.f()[pri:0, instance:mavenproject.Dataexisting@5ae63ade]">f</td> 
+  <td>main@1263877414</td>   <td></td> </tr>
 </table>
